fixed navbar collapse bug

--- a/client/stylesheets/searchbox.css
+++ b/client/stylesheets/searchbox.css
@@ -71,6 +71,3 @@
 #searchResultsPanel{
   /*overflow: auto;*/
 }
-.collapsed {
-  visibility: collapse;
-}
